# CppTemplate

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql.yml  devskim.yml  main.yml  msvc.yml
include/CppTemplate/: CppTemplate.hpp
src/: main.cpp
src/CppTemplate/: CppTemplate.cpp
test/CppTemplate/: CppTemplateTest.cpp
